--- a/views/MapeoRutas.html
+++ b/views/MapeoRutas.html
@@ -96,6 +96,9 @@
                                         <li class="permit permit-DSB010"><a id="btnBeneficiario" href="catalogoBene.html">Beneficiarios</a></li>
                                     </ul>
                                 </li>
+                                <li class="permit permit-DSB016">
+                                    <a id="btnExpOperadores" href="expOperadores.html"><i class="fas fa-folder-open"></i> Suspensión de Operadores</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -552,13 +555,24 @@
 
         </script>
     <!-- PNotify -->
-    <script src="../js/PNotify.js"></script>
+    <script src="https://sciactive.com/pnotify/lib/iife/PNotify.js"></script>
+    <link rel="stylesheet" href="https://sciactive.com/pnotify/src/PNotifyBrightTheme.css" />
+    <script src="https://sciactive.com/pnotify/lib/iife/PNotifyButtons.js"></script>
+    <script src="https://sciactive.com/pnotify/lib/iife/PNotifyAnimate.js"></script>
+    <script src="https://sciactive.com/pnotify/lib/iife/PNotifyCallbacks.js"></script>
+    <script src="https://sciactive.com/pnotify/lib/iife/PNotifyNonBlock.js"></script>
+    <script src="https://sciactive.com/pnotify/lib/iife/PNotifyMobile.js"></script>
+    <script src="https://sciactive.com/pnotify/lib/iife/PNotifyHistory.js"></script>
+    <script src="https://sciactive.com/pnotify/lib/iife/PNotifyDesktop.js"></script>
+    <script src="https://sciactive.com/pnotify/lib/iife/PNotifyConfirm.js"></script>
+    <script src="https://sciactive.com/pnotify/lib/iife/PNotifyStyleMaterial.js"></script>
+    <script src="https://sciactive.com/pnotify/lib/iife/PNotifyReference.js"></script>
     <!-- Switchery -->
     <script src="../vendors/switchery/dist/switchery.min.js"></script>
 
     <!-- Custom Theme Scripts -->
-    <script src="../js/comun.js"></script>
-    <script src="../js/MapeoRutas.js"></script>
+    <script src="../js/comun.min.js"></script>
+    <script src="../js/MapeoRutas.min.js"></script>
     <script src="../js/custom.js"></script>
 </body>
 
