--- a/views/ReportePF.html
+++ b/views/ReportePF.html
@@ -96,6 +96,9 @@
                                         <li class="permit permit-DSB010"><a id="btnBeneficiario" href="catalogoBene.html">Beneficiarios</a></li>
                                     </ul>
                                 </li>
+                                <li class="permit permit-DSB016">
+                                    <a id="btnExpOperadores" href="expOperadores.html"><i class="fas fa-folder-open"></i> Suspensión de Operadores</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -282,8 +285,8 @@
     <script src="../vendors/datatables.net-buttons/js/buttons.html5.js"></script>
     <script src="../vendors/datatables.net-buttons/js/buttons.print.js"></script>
     <!-- Custom Theme Scripts -->
-    <script src="../js/comun.js"></script>
-    <script src="../js/reportes.js"></script>
+    <script src="../js/comun.min.js"></script>
+    <script src="../js/reportes.min.js"></script>
     <script src="../js/custom.js"></script>
 </body>
 
