--- a/views/home.html
+++ b/views/home.html
@@ -88,6 +88,9 @@
                                         <li class="permit permit-DSB010"><a id="btnBeneficiario" href="catalogoBene.html">Beneficiarios</a></li>
                                     </ul>
                                 </li>
+                                <li class="permit permit-DSB016">
+                                    <a id="btnExpOperadores" href="expOperadores.html"><i class="fas fa-folder-open"></i> Suspensión de Operadores</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -212,7 +215,7 @@
     <script src="../js/highcharts/exporting.js"></script>    
     <script src="../js/highcharts/export-data.js"></script>  
     <!-- Custom Theme Scripts -->
-    <script src="../js/comun.js"></script>
+    <script src="../js/comun.min.js"></script>
     <script src="../js/custom.js"></script>
 </body>
 
