--- a/css/ciatecCustom.css
+++ b/css/ciatecCustom.css
@@ -56,7 +56,7 @@ body{
 #btnRegresarBPF,
 #btnGuardarPJ,
 #fromularioNuevaPF,
-#alertaVali{
+.alertaVali{
 	display: none;
 }
 #lblNombreTitular{
@@ -75,7 +75,7 @@ body{
 	position: absolute;
 	left: 50%;
 	top: 50%;
-	z-index: 11;
+	z-index: 111;
 	width: 150px;
 	height: 150px;
 	margin: -75px 0 0 -75px;
@@ -87,7 +87,24 @@ body{
 	-webkit-animation: spin 2s linear infinite;
 	animation: spin 2s linear infinite;
   }
-  
+
+   #loader_conce {
+	   display: none;
+	   position: absolute;
+	   left: 50%;
+	   top: 50%;
+	   z-index: 1051;
+	   width: 150px;
+	   height: 150px;
+	   margin: -75px 0 0 -75px;
+	   border: 16px solid #f3f3f3;
+	   border-radius: 50%;
+	   border-top: 16px solid #3498db;
+	   width: 120px;
+	   height: 120px;
+	   -webkit-animation: spin 2s linear infinite;
+	   animation: spin 2s linear infinite;
+   }
   @-webkit-keyframes spin {
 	0% { -webkit-transform: rotate(0deg); }
 	100% { -webkit-transform: rotate(360deg); }
@@ -124,8 +141,17 @@ body{
 	  background-color: #5E6974;
 	  opacity: 0.5;
 	  position: absolute;
-	  z-index: 10;
+	  z-index: 110;
   }
+#loader_bkg_conce{
+	display: none;
+	width: 100%;
+	height: 100%;
+	background-color: #5E6974;
+	opacity: 0.5;
+	position: absolute;
+	z-index: 1051;
+}
 .dot {
 	height: 5px;
 	width: 5px;
