--- a/views/admin.html
+++ b/views/admin.html
@@ -93,6 +93,9 @@
                                                 href="catalogoBene.html">Beneficiarios</a></li>
                                     </ul>
                                 </li>
+                                <li class="permit permit-DSB016">
+                                    <a id="btnExpOperadores" href="expOperadores.html"><i class="fas fa-folder-open"></i> Suspensión de Operadores</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -276,8 +279,8 @@
     <script src="../js/highcharts/exporting.js"></script>
     <script src="../js/highcharts/export-data.js"></script>
     <!-- Custom Theme Scripts -->
-    <script src="../js/comun.js"></script>
-    <script src="../js/ciatecCustom.js"></script>
+    <script src="../js/comun.min.js"></script>
+    <script src="../js/ciatecCustom.min.js"></script>
     <script src="../js/custom.js"></script>
 </body>
 
