--- a/views/index.html
+++ b/views/index.html
@@ -29,10 +29,6 @@
   <!-- Custom Theme Style -->
   <link href="../css/custom.css" rel="stylesheet">
   <link href="../css/ciatecCustom.css" rel="stylesheet">
-  <!-- PNotify -->
-  <link href="../vendors/pnotify/dist/pnotify.css" rel="stylesheet">
-  <link href="../vendors/pnotify/dist/pnotify.buttons.css" rel="stylesheet">
-  <link href="../vendors/pnotify/dist/pnotify.nonblock.css" rel="stylesheet">
 
 
 </head>
@@ -45,13 +41,13 @@
     <div class="login_wrapper">
       <div class="animate form login_form">
         <section class="login_content">
-          <form>
+          <form id="formLogin" data-parsley-validate="">
             <h1><img id="logoImg" src="../img/LogoSLP.png"></h1>
             <div>
-              <input type="text" id="user" class="form-control" placeholder="Ingresar Usuario" required="" />
+              <input type="text" id="user" class="form-control" data-parsley-trigger="change" placeholder="Ingresar Usuario" required="required" />
             </div>
             <div>
-              <input type="password" id="pass" class="form-control" placeholder="Ingresar Contraseña" required="" />
+              <input type="password" id="pass" class="form-control" data-parsley-trigger="change" placeholder="Ingresar Contraseña" required="required" />
             </div>
             <div>
               <a class="btn btn-default submit" id="btnLogin">Acceder</a>
@@ -116,9 +112,11 @@
 <script src="../js/PNotify.js"></script>
 <!-- MD5 -->
 <script src="../js/md5.min.js"></script>
+<!-- Parsley -->
+<script src="../vendors/parsleyjs/dist/parsley.min.js"></script>
 
 
 <!-- Custom -->
-<script src="../js/login.js"></script>
+<script src="../js/login.min.js"></script>
 
 </html>
