--- a/views/catalogoBene.html
+++ b/views/catalogoBene.html
@@ -39,6 +39,8 @@
 </head>
 
 <body class="nav-md">
+    <div id="loader_conce"></div>
+    <div id="loader_bkg_conce"></div>
     <div class="container body">
         <div class="main_container">
             <div class="col-md-3 left_col">
@@ -66,34 +68,44 @@
                                 <li class="permit permit-DSB001"><a id="btnAdmin" href="admin.html"><i
                                             class="fas fa-home"></i> Página principal </a>
                                 </li>
-                                <li class="permit permit-DSB002 permit-DSB003"><a id="btnReportes"><i class="fas fa-table"></i>
+                                <li class="permit permit-DSB002 permit-DSB003"><a id="btnReportes"><i
+                                            class="fas fa-table"></i>
                                         Reportes <span class="fas fa-caret-down"></span></a>
                                     <ul class="nav child_menu">
                                         <!--<li><a id="btnReporte1" href="Reportes.html">Trámites</a></li>-->
                                         <li><a id="btnRepTranparencia" href="Reportes2.html">Transparecia</a></li>
-                                        <li><a id="btnRepPersonasFisicas" href="ReportePF.html">Personas Fisicas</a></li>
-                                        <li><a id="btnRepPersonasConce" href="ReporteConce.html">Reporte de concesionarios</a></li>
+                                        <li><a id="btnRepPersonasFisicas" href="ReportePF.html">Personas Fisicas</a>
+                                        </li>
+                                        <li><a id="btnRepPersonasConce" href="ReporteConce.html">Reporte de
+                                                concesionarios</a></li>
                                     </ul>
                                 </li>
-                                <li class="permit permit-DSB004 permit-DSB005 permit-DSB006"><a id="btnMapeoRutas" href="MapeoRutas.html"><i
-                                            class="fas fa-map-marked-alt"></i>
+                                <li class="permit permit-DSB004 permit-DSB005 permit-DSB006"><a id="btnMapeoRutas"
+                                        href="MapeoRutas.html"><i class="fas fa-map-marked-alt"></i>
                                         Mapeo Rutas
                                     </a>
                                 </li>
                                 <li class="permit permit-DSB011">
-                                    <a href="concesiones.html" id="btnConcesiones"><i class="fas fa-user-tag"></i>Concesionarios</a>
+                                    <a href="concesiones.html" id="btnConcesiones"><i
+                                            class="fas fa-user-tag"></i>Concesionarios</a>
                                 </li>
-                                <li class="permit permit-DSB007 permit-DSB008 permit-DSB009 permit-DSB010"><a id="btnCatalogos"><i class="fas fa-book-open"></i>
-                                    Personalidades Juridicas <span class="fas fa-caret-down"></span></a>
+                                <li class="permit permit-DSB007 permit-DSB008 permit-DSB009 permit-DSB010"><a
+                                        id="btnCatalogos"><i class="fas fa-book-open"></i>
+                                        Personalidades Juridicas <span class="fas fa-caret-down"></span></a>
                                     <ul class="nav child_menu">
-                                        <li class="permit permit-DSB007"><a id="btnRepLeg" href="catalogoRepLeg.html">Apoderados Legales</a></li>
-                                        <li class="permit permit-DSB009"><a id="btnTutor" href="catalogoTutor.html">Tutor</a></li>
-                                        <li class="permit permit-DSB008"><a id="btnAlbacea" href="catalogoAlbacea.html">Albacea</a></li>
-                                        <li class="permit permit-DSB010"><a id="btnBeneficiario" href="catalogoBene.html">Beneficiarios</a></li>
+                                        <li class="permit permit-DSB007"><a id="btnRepLeg"
+                                                href="catalogoRepLeg.html">Apoderados Legales</a></li>
+                                        <li class="permit permit-DSB009"><a id="btnTutor"
+                                                href="catalogoTutor.html">Tutor</a></li>
+                                        <li class="permit permit-DSB008"><a id="btnAlbacea"
+                                                href="catalogoAlbacea.html">Albacea</a></li>
+                                        <li class="permit permit-DSB010"><a id="btnBeneficiario"
+                                                href="catalogoBene.html">Beneficiarios</a></li>
                                     </ul>
                                 </li>
                                 <li class="permit permit-DSB016">
-                                    <a id="btnExpOperadores" href="expOperadores.html"><i class="fas fa-folder-open"></i> Suspensión de Operadores</a>
+                                    <a id="btnExpOperadores" href="expOperadores.html"><i
+                                            class="fas fa-folder-open"></i> Suspensión de Operadores</a>
                                 </li>
                             </ul>
                         </div>
@@ -166,7 +178,7 @@
                                 </div>
                                 <button id="btnBuscar" class="btn btn-lg btn-primary">Buscar</button>
                                 <button id="btnNuevo" class="btn btn-lg btn-primary"
-                                    data-target=".bs-example-modal-lg">Nuevo</button>                                
+                                    data-target=".bs-example-modal-lg">Nuevo</button>
                                 <div class="modal fade bs-example-modal-lg" id="modalLarge" tabindex="-1" role="dialog"
                                     aria-hidden="true">
                                     <div class="modal-dialog modal-lg">
@@ -180,7 +192,8 @@
                                                         palabra con la que deseas realizar la busqueda</small>
                                                 </div>
                                                 <button id="btnBuscarPF" class="btn btn-lg btn-primary">Buscar</button>
-                                                <button id="btnNuevaPF" type="button" class="btn btn-lg btn-default" disabled>Crear persona fisica</button>
+                                                <button id="btnNuevaPF" type="button" class="btn btn-lg btn-default"
+                                                    disabled>Crear persona fisica</button>
                                                 <table id="tablaPerFisicas" class="table">
                                                     <thead>
                                                         <tr>
@@ -199,28 +212,35 @@
                                             <div id="formularioDiv" class="modal-body">
                                                 <form id="formDiv" data-parsley-validate
                                                     class="form-horizontal form-label-left">
-                                                    
+
                                                 </form>
                                             </div>
                                             <div class="modal-footer" id="formDivFooter">
-                                                <input form="formNuevaPF" id="btnSaveData" class="btn btn-success" value="Guardar datos">
-                                                <button id="btnCancelar" type="button" data-dismiss="modal" class="btn btn-danger">Cancelar</button>                                            
-                                                <button id="btnAgregarPF" type="button" class="btn btn-primary" disabled>Añadir a catálogo de Beneficiarios </button>
+                                                <input form="formNuevaPF" id="btnSaveData" class="btn btn-success"
+                                                    value="Guardar datos">
+                                                <button id="btnCancelar" type="button" data-dismiss="modal"
+                                                    class="btn btn-danger">Cancelar</button>
+                                                <button id="btnAgregarPF" type="button" class="btn btn-primary"
+                                                    disabled>Añadir a catálogo de Beneficiarios </button>
                                                 <!--<button id="btnRegresarBPF" type="button" class="btn btn-default" >Regresar</button>-->
                                             </div>
 
                                         </div>
                                     </div>
                                 </div>
-                                <div class="modal fade bs-example-modal-sm" id="modalSmall" tabindex="-1" role="dialog" aria-hidden="true">
+                                <div class="modal fade bs-example-modal-sm" id="modalSmall" tabindex="-1" role="dialog"
+                                    aria-hidden="true">
                                     <div class="modal-dialog modal-sm">
                                         <div class="modal-content" id="alertDelete">
-                                            <div class="modal-body alert alert-danger" role="alert"> 
-                                                <h4>¿Desea eliminar a <b id="nomUsuario"></b> del catálogo de <b id="tipoUlabel"></b>?</h4>
+                                            <div class="modal-body alert alert-danger" role="alert">
+                                                <h4>¿Desea eliminar a <b id="nomUsuario"></b> del catálogo de <b
+                                                        id="tipoUlabel"></b>?</h4>
                                             </div>
                                             <div class="modal-footer">
-                                                <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
-                                                <button type="button" id="btnElimitarPJ" class="btn btn-danger">Si</button>
+                                                <button type="button" class="btn btn-default"
+                                                    data-dismiss="modal">No</button>
+                                                <button type="button" id="btnElimitarPJ"
+                                                    class="btn btn-danger">Si</button>
                                             </div>
                                         </div>
                                     </div>
@@ -228,7 +248,8 @@
                                 <br>
                                 <table id="tablaCatalogos" class="table table-hover">
                                     <thead>
-                                        <tr><th style="display:none">Id Prestador</th>
+                                        <tr>
+                                            <th style="display:none">Id Prestador</th>
                                             <th style="display: none"></th>
                                             <th>Número Económico</th>
                                             <th>Nombre</th>
