--- a/views/ReportePF.html
+++ b/views/ReportePF.html
@@ -74,9 +74,9 @@
                                         Reportes <span class="fas fa-caret-down"></span></a>
                                     <ul class="nav child_menu">
                                         <!--<li><a id="btnReporte1" href="Reportes.html">Trámites</a></li>-->
-                                        <li><a id="btnRepTranparencia" href="Reportes2.html">Transparecia</a></li>
-                                        <li><a id="btnRepPersonasFisicas" href="ReportePF.html">Personas Fisicas</a></li>
-                                        <li><a id="btnRepPersonasConce" href="ReporteConce.html">Reporte de concesionarios</a></li>
+                                        <li class="permit permit-DSB012"><a id="btnRepTranparencia" href="Reportes2.html">Transparecia</a></li>
+										<li class="permit permit-DSB013"><a id="btnRepPersonasFisicas" href="ReportePF.html">Personas Fisicas</a></li>
+										<li class="permit permit-DSB014"><a id="btnRepPersonasConce" href="ReporteConce.html">Reporte de concesionarios</a></li>
                                     </ul>
                                 </li>
                                 <li class="permit permit-DSB004 permit-DSB005 permit-DSB006"><a id="btnMapeoRutas" href="MapeoRutas.html"><i
